@@ -20,6 +20,9 @@ Release 2.5.0 - UNRELEASED
     YARN-1429. *nix: Allow a way for users to augment classpath of YARN daemons.
     (Jarek Jarcec Cecho via kasha)
 
+    YARN-1833. TestRMAdminService Fails in trunk and branch-2 (Mit Desais via
+    jeagles)
+
   OPTIMIZATIONS
 
   BUG FIXES 
